# AlgorithmAnalyzer

./: index.html  package-lock.json  package.json
algorithm_engine/: CMakeLists.txt
algorithm_engine/examples/: cli_demo.cpp
algorithm_engine/include/algorithms/sorting/: BubbleSort.h  QuickSort.h
algorithm_engine/include/engine/: Algorithm.h  Engine.h
algorithm_engine/src/algorithms/sorting/: BubbleSort.cpp  QuickSort.cpp
algorithm_engine/src/engine/: Engine.cpp
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
server/: package-lock.json  package.json
src/: App.jsx
src/pages/: HomePage.jsx  index.js
